package edu.fiuba.algo3;

import java.util.List;

public interface Evaluable {

    boolean esJugada(List<CartaPoker> cartas);
}
